<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- This is commons pom.xml -->
    <groupId>io.mercury</groupId>
    <artifactId>mercury</artifactId>
    <version>1.0-SNAPSHOT</version>

    <inceptionYear>2015</inceptionYear>
    <url>https://github.com/yellow013/mercury.git</url>
    <developers>
        <developer>
            <name>yellow013</name>
        </developer>
    </developers>

    <name>mercury</name>
    <packaging>pom</packaging>

    <modules>
        <module>actors</module>
        <module>commons</module>
        <module>libraries</module>
        <module>persistence</module>
        <module>serialization</module>
        <module>storage</module>
        <module>toolkit</module>
        <module>transport</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java 1.8 -->
        <!-- <java.version>1.8</java.version> -->
        <!-- <maven.compiler.target>1.8</maven.compiler.target> -->
        <!-- <maven.compiler.source>1.8</maven.compiler.source> -->
        <!-- Java 11 -->
        <!-- <java.version>11</java.version> -->
        <!-- <maven.compiler.target>11</maven.compiler.target> -->
        <!-- <maven.compiler.source>11</maven.compiler.source> -->
        <!-- Java 17 -->
        <java.version>20</java.version>
        <maven.compiler.target>20</maven.compiler.target>
        <maven.compiler.source>20</maven.compiler.source>
        <!-- Common library version -->
        <slf4j.version>1.7.36</slf4j.version>
        <junit.version>4.13.2</junit.version>
        <jupiter.version>5.9.2</jupiter.version>
        <netty.version>4.1.92.Final</netty.version>
        <jackson.version>2.14.2</jackson.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- JUnit 4 -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- junit-jupiter of JUnit 5 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- JSR305 Annotations for Find bugs -->
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>3.0.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>